--- a/indexNew.html
+++ b/indexNew.html
@@ -48,29 +48,53 @@
         </div>   
     </div><!-- /navbar-wrapper -->
 
-
-    <!-- simple bootstrap carousel -->
-     <div id="carousel-generic" class="carousel slide small-browser-margins reposition-top" data-ride="carousel">
-
-        <ol class="carousel-indicators">
-           <li data-target="#carousel-generic" data-slide-to="0" class="active"></li>
-           <li data-target="#carousel-generic" data-slide-to="1"></li>
-           <li data-target="#carousel-generic" data-slide-to="2"></li>
-           <li data-target="#carousel-generic" data-slide-to="3"></li>
-        </ol>
-
-        <div class="carousel-inner">
-           <div class="item active">
-              <img src="https://slocumpainting.github.io/carouselImage0.png" alt="" class="img-responsive" style="object-fit: cover;">
-           </div>
-           <div class="item">
-              <img src="https://slocumpainting.github.io/carouselImage1.png" alt="" class="img-responsive" style="object-fit: cover;">
-           </div>
-           <div class="item">
-              <img src="https://slocumpainting.github.io/carouselImage2.png" alt="" class="img-responsive" style="object-fit: cover;">
-           </div>     
+<div id="myCarousel" class="carousel slide" data-ride="carousel">
+    <ol class="carousel-indicators">
+      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+      <li data-target="#myCarousel" data-slide-to="1"></li>
+      <li data-target="#myCarousel" data-slide-to="2"></li>
+    </ol>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="https://slocumpainting.github.io/carouselImage0.png" style="object-fit: cover;"></img>
+        <div class="container">
+          <div class="carousel-caption text-left">
+            <h1>Example headline.</h1>
+            <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+            <p><a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a></p>
+          </div>
         </div>
-     </div><!-- /#carousel-generic -->
+      </div>
+      <div class="carousel-item">
+        <img src="https://slocumpainting.github.io/carouselImage1.png" style="object-fit: cover;"></img>        
+        <div class="container">
+          <div class="carousel-caption">
+            <h1>Another example headline.</h1>
+            <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+            <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
+          </div>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="https://slocumpainting.github.io/carouselImage2.png" style="object-fit: cover;"></img>
+        <div class="container">
+          <div class="carousel-caption text-right">
+            <h1>One more for good measure.</h1>
+            <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+            <p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div> 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
